--- a/retailer_dashboard.css
+++ b/retailer_dashboard.css
@@ -52,6 +52,7 @@ body {
     --bene-chrome-medium-high: #1b1b1b;
     --bene-white: rgb(0, 0, 0);
     --bene-acrylic: rgba(30, 30, 30, 0.6);
+    --bene-nav-color: rgba(146, 197, 232, 0.1);
   }
 
   .navbar > img {
@@ -74,9 +75,15 @@ body {
   --bene-chrome-medium-high: #f1f1f1;
   --bene-white: #fff;
   --bene-acrylic: rgba(255, 255, 255, 0.6);
+  --bene-nav-color: #fff;
 }
 
 .bene-body-base-medium {
+  color: var(--bene-base-medium);
+}
+
+.bene-body-base-small {
+  font-size: 14px;
   color: var(--bene-base-medium);
 }
 
@@ -124,10 +131,10 @@ body {
   text-decoration: none;
   font-size: 15px;
   font-weight: 600 !important;
-  color: #000 !important;
+  color: var(--bene-base-high) !important;
   display: block;
   transition: 0.3s;
-  background-color: #fff;
+  background-color: var(--bene-nav-color);
   border-radius: 5px;
   text-decoration: none;
   /* filter: drop-shadow(0px 15px 30px rgba(0, 0, 0, 0.05)); */
@@ -259,7 +266,7 @@ body {
 }
 
 .profile-upload-image {
-  background-image: url(Assets/world_vision_logo.png);
+  background-image: url(Assets/Nykaa.png);
   height: 100px;
   width: 200px;
   background-size: contain;
@@ -565,6 +572,9 @@ textarea {
 }
 
 .activecampaigns {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  max-width: 560px;
   margin-top: 20px;
 }
 
@@ -587,8 +597,7 @@ textarea {
 
 .gridviewmedium {
   display: grid;
-  grid-template-rows: 150px 50px;
-  height: 300px;
+  grid-template-rows: 150px fit-content;
   background-color: var(--bene-white);
   filter: drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.05));
   width: 250px;
@@ -602,8 +611,9 @@ textarea {
   filter: drop-shadow(0px 15px 30px rgba(0, 0, 0, 0.05));
 }
 
-.gridviewimg {
-  background-image: url("Assets/amazon-brazil-fire.jpg");
+.gridviewimg > img {
+  width: 250px;
+  /* background-image: url("Assets/amazon-brazil-fire.jpg"); */
   background-size: cover;
   background-repeat: no-repeat;
   border-radius: 5px 5px 0px 0px;
@@ -612,8 +622,8 @@ textarea {
 }
 
 .gridviewcontent {
-  width: 250px;
-  padding: 10px 20px;
+  padding: 10px 20px 20px 20px;
+  height: fit-content;
 }
 .listviewimg {
   background-image: url("Assets/amazon-brazil-fire.jpg");
@@ -625,7 +635,7 @@ textarea {
 }
 
 .listviewcontent {
-  width: 50px;
+  width: 230px;
   padding: 10px 20px;
 }
 
