--- a/retailer_dashboard.css
+++ b/retailer_dashboard.css
@@ -77,7 +77,11 @@ body {
   --bene-alt-high: #fff;
   --bene-acrylic: rgba(255, 255, 255, 0.6);
   --bene-nav-color: #fff;
-  --bene-small-shadow: rgba(0, 0, 0, 0.1);
+  --bene-small-shadow: rgba(0, 0, 0, 0.05);
+}
+
+a {
+  text-decoration: none;
 }
 
 .bene-body-base-medium {
@@ -381,7 +385,7 @@ body {
 }
 
 .modalbox {
-  background-color: var(--bene-alt-high);
+  background-color: var(--bene-chrome-low);
   height: auto;
   min-height: 200px;
   width: auto;
@@ -522,11 +526,13 @@ label {
 .inputtext {
   background-color: var(--bene-alt-high);
   font-family: "Work Sans", sans-serif;
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
   font-size: 13px;
   padding: 10px;
   width: 100%;
   border: 1px solid var(--bene-chrome-low);
   color: var(--bene-base-high);
+  background-color: var(--bene-chrome-medium);
   border-radius: 3px;
   outline: none;
   -webkit-appearance: none;
@@ -559,9 +565,12 @@ select {
   font-size: 13px;
   padding: 10px;
   width: 100%;
-  border: 1px solid #e2e2e2;
+  border: 1px solid var(--bene-chrome-medium);
+  background-color: var(--bene-chrome-medium);
+  color: var(--bene-base-high);
   border-radius: 3px;
   outline: none;
+  -webkit-appearance: none;
 }
 
 .accountstatus {
