--- a/retailer_dashboard.css
+++ b/retailer_dashboard.css
@@ -73,7 +73,8 @@ body {
   --bene-blue: #92c5e8;
   --bene-base-medium: #7a7a7a;
   --bene-base-high: #000;
-  --bene-chrome-low: #f9f9f9;
+  /* --bene-chrome-low: #f9f9f9; */
+  --bene-chrome-low: #fff;
   --bene-chrome-medium: #fcfcfc;
   --bene-chrome-medium-high: #f1f1f1;
   --bene-alt-high: #fff;
@@ -81,7 +82,7 @@ body {
   --bene-nav-color: #fff;
   --bene-small-shadow: rgba(0, 0, 0, 0.05);
   --bene-medium-shadow: rgba(0, 0, 0, 0.05);
-  --bene-medium-hover-shadow: rgba(0,0,0,0.12);
+  --bene-medium-hover-shadow: rgba(0,0,0,0.1);
 }
 
 a {
@@ -94,7 +95,9 @@ a {
 }
 
 .bene-body-base-small {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 14px;
+  line-height: 20px;
   color: var(--bene-base-medium);
 }
 
@@ -183,7 +186,7 @@ a {
   -webkit-backdrop-filter: blur(20px);
   backdrop-filter: blur(20px);
   z-index: 10;
-  filter: drop-shadow(0px 15px 30px rgba(0, 0, 0, 0.03));
+  /* filter: drop-shadow(0px 15px 30px rgba(0, 0, 0, 0.03)); */
 }
 
 .header img {
@@ -211,7 +214,7 @@ a {
   letter-spacing: 0.5px;
   font-size: 12px;
   color: var(--bene-base-medium);
-  line-height: 20px;
+  line-height: 24px;
 }
 
 .bene-body-title {
@@ -222,9 +225,9 @@ a {
 }
 
 .bene-body-subtitle {
-  font-size: 15px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: var(--bene-base-high);
-  line-height: 20px;
+  line-height: 24px;
   font-weight: 400;
 }
 
@@ -651,6 +654,8 @@ textarea {
 }
 
 .gridviewcontent {
+  display: grid;
+  grid-gap: 5px;
   padding: 10px 20px 20px 20px;
   height: fit-content;
 }
@@ -666,6 +671,10 @@ textarea {
 .listviewcontent {
   width: fit-content;
   padding: 10px 20px;
+}
+
+.choosecampaign{
+  max-width: 512px;
 }
 
 @media all and (-webkit-min-device-pixel-ratio: 0) and (min-resolution: 0.001dpcm) {
