--- a/retailer_dashboard.css
+++ b/retailer_dashboard.css
@@ -541,10 +541,10 @@ label {
 
 .inputtext {
   background-color: var(--bene-alt-high);
-  font-family: "Work Sans", sans-serif;
-  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
-  font-size: 13px;
-  padding: 10px;
+  /* font-family: "Work Sans", sans-serif; */
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 14px;
+  padding: 10px 15px;
   width: 100%;
   /* border: 1px solid var(--bene-chrome-low); */
   border: none;
@@ -595,9 +595,14 @@ select {
   border: 1px solid var(--bene-chrome-medium);
   background-color: var(--bene-chrome-medium);
   color: var(--bene-base-high);
-  border-radius: 3px;
+  border-radius: 20px;
   outline: none;
   -webkit-appearance: none;
+}
+
+select:hover{
+  background-color: var(--bene-chrome-medium-high);
+
 }
 
 .accountstatus {
