--- a/retailer_dashboard.css
+++ b/retailer_dashboard.css
@@ -179,8 +179,7 @@ a {
   cursor: pointer;
 }
 
-.header_title {
-}
+.header_title {}
 
 .header {
   position: fixed;
@@ -256,7 +255,7 @@ a {
   font-size: 15px;
 }
 
-.campaignstablecard > div {
+.campaignstablecard>div {
   padding: 24px 20px;
 }
 
@@ -292,7 +291,7 @@ a {
   background-repeat: no-repeat;
 }
 
-.campaign-upload-image > img {
+.campaign-upload-image>img {
   height: 200px;
   width: 300px;
   object-fit: cover;
@@ -311,7 +310,7 @@ a {
   background-repeat: no-repeat;
 }
 
-.campaign-upload-image > div {
+.campaign-upload-image>div {
   position: absolute;
   bottom: 0;
   right: 0;
@@ -493,11 +492,11 @@ a {
   color: var(--bene-base-high);
 }
 
-.transactionstablehead > div {
+.transactionstablehead>div {
   padding: 0px 10px;
 }
 
-.transactionstablecard > div {
+.transactionstablecard>div {
   padding: 12px 10px;
 }
 
@@ -556,6 +555,11 @@ label {
   /* line-height: 27px; */
 }
 
+.custom-doc {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
 .inputtextarea {
   /* background-color: var(--bene-alt-high); */
   /* font-family: "Work Sans", sans-serif; */
@@ -575,7 +579,7 @@ label {
 }
 
 .inputtextarea:focus {
-  background-color: var(--bene-chrome-medium);
+  background-color: var(--bene-chrome-medium-high);
   /* filter: drop-shadow(0px 2px 4px var(--bene-small-shadow)); */
 }
 
@@ -584,7 +588,7 @@ label {
 }
 
 .inputtextarea:focus:hover {
-  background-color: var(--bene-chrome-medium);
+  background-color: var(--bene-chrome-medium-high);
 }
 
 .inputtext {
@@ -606,7 +610,7 @@ label {
 }
 
 .inputtext:focus {
-  background-color: var(--bene-chrome-medium);
+  background-color: var(--bene-chrome-medium-high);
   /* filter: drop-shadow(0px 2px 4px var(--bene-small-shadow)); */
 }
 
@@ -615,7 +619,7 @@ label {
 }
 
 .inputtext:focus:hover {
-  background-color: var(--bene-chrome-medium);
+  background-color: var(--bene-chrome-medium-high);
 }
 
 .modal-input-1 {
@@ -662,11 +666,11 @@ select:hover {
   min-width: 800px;
 }
 
-.accountstatus > div {
+.accountstatus>div {
   max-width: 240px;
 }
 
-.accountstatus > div > img {
+.accountstatus>div>img {
   padding: 20px;
 }
 
@@ -716,7 +720,7 @@ textarea {
   filter: drop-shadow(0px 5px 10px var(--bene-medium-hover-shadow));
 }
 
-.gridviewimg > img {
+.gridviewimg>img {
   width: 250px;
   /* background-image: url("Assets/amazon-brazil-fire.jpg"); */
   background-size: cover;
@@ -732,6 +736,7 @@ textarea {
   padding: 10px 20px 20px 20px;
   height: fit-content;
 }
+
 .listviewimg {
   background-image: url("Assets/amazon-brazil-fire.jpg");
   background-size: cover;
@@ -762,6 +767,9 @@ textarea {
   padding: 10px;
   opacity: 0.4;
   transition: 200ms ease-out;
+  font-family: "Work Sans", sans-serif;
+  font-weight: 400;
+  font-size: 17px;
 }
 
 .tab img {
@@ -774,6 +782,13 @@ textarea {
   cursor: pointer;
   background-color: var(--bene-chrome-medium);
   opacity: 1;
+}
+
+.tab:active {
+  cursor: pointer;
+  background-color: var(--bene-chrome-medium-high);
+  opacity: 1;
+  font-weight: 600;
 }
 
 @media all and (-webkit-min-device-pixel-ratio: 0) and (min-resolution: 0.001dpcm) {
