--- a/retailer_dashboard.css
+++ b/retailer_dashboard.css
@@ -556,6 +556,7 @@ label {
 }
 
 .custom-doc {
+  display: none;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
