--- a/retailer_dashboard.css
+++ b/retailer_dashboard.css
@@ -557,6 +557,7 @@ label {
 
 .custom-doc {
   display: none;
+  animation: fadein 300ms;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
