--- a/retailer_dashboard.css
+++ b/retailer_dashboard.css
@@ -570,6 +570,13 @@ label {
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
+.shopify-doc {
+  display: grid;
+  animation: fadein 300ms;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
 .doc-pictures {
   display: grid;
   justify-self: center;
