--- a/retailer_dashboard.css
+++ b/retailer_dashboard.css
@@ -80,7 +80,7 @@ body {
   --bene-chrome-medium: #f5f5f5;
   --bene-chrome-medium-high: #eeeeee;
   --bene-alt-high: #fff;
-  --bene-acrylic: rgba(255, 255, 255, 0.8);
+  --bene-acrylic: rgba(255, 255, 255, 0.5);
   --bene-nav-color: #fff;
   --bene-small-shadow: rgba(0, 0, 0, 0.04);
   --bene-medium-shadow: rgba(0, 0, 0, 0.05);
@@ -571,6 +571,13 @@ label {
 }
 
 .shopify-doc {
+  display: none;
+  animation: fadein 300ms;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.woocommerce-doc {
   display: grid;
   animation: fadein 300ms;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
@@ -580,7 +587,8 @@ label {
 .doc-pictures {
   display: grid;
   justify-self: center;
-  max-width: 800px;
+  width: 100%;
+  max-width: 900px;
   margin: 20px;
 
   /* filter: drop-shadow(0px 7px 10px var(--bene-medium-hover-shadow)); */
