--- a/retailer_dashboard.css
+++ b/retailer_dashboard.css
@@ -40,7 +40,7 @@ body {
   border-width: 0px 0px 1px 0px;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   body {
     --bene-red: #ba3027;
     --bene-lightblue: #1a1a1a;
@@ -68,14 +68,14 @@ body {
   .header_title {
     content: url("Assets/home_header_dark.svg");
   }
-}
+} */
 
 :root {
   --bene-red: #ba3027;
   --bene-lightblue: #edf3f8;
   --bene-blue: #92c5e8;
   --bene-base-medium: #7a7a7a;
-  --bene-border: #F5F5F5;
+  --bene-border: #f5f5f5;
   --bene-base-high: #000;
   /* --bene-chrome-low: #f9f9f9; */
   --bene-chrome-low: #f9f9f9;
@@ -181,7 +181,6 @@ a {
   cursor: pointer;
 }
 
-
 .header {
   position: fixed !important;
   width: 100%;
@@ -256,7 +255,7 @@ a {
   font-size: 15px;
 }
 
-.campaignstablecard>div {
+.campaignstablecard > div {
   padding: 24px 20px;
 }
 
@@ -292,7 +291,7 @@ a {
   background-repeat: no-repeat;
 }
 
-.campaign-upload-image>img {
+.campaign-upload-image > img {
   height: 200px;
   width: 300px;
   object-fit: cover;
@@ -311,7 +310,7 @@ a {
   background-repeat: no-repeat;
 }
 
-.campaign-upload-image>div {
+.campaign-upload-image > div {
   position: absolute;
   bottom: 0;
   right: 0;
@@ -489,11 +488,11 @@ a {
   color: var(--bene-base-high);
 }
 
-.transactionstablehead>div {
+.transactionstablehead > div {
   padding: 0px 10px;
 }
 
-.transactionstablecard>div {
+.transactionstablecard > div {
   padding: 12px 10px;
 }
 
@@ -532,7 +531,7 @@ a {
 }
 
 .transfer-donations-table {
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
   display: grid;
   align-content: flex-start;
   grid-template-columns: 1fr;
@@ -540,7 +539,6 @@ a {
   background-color: var(--bene-alt-high);
   filter: drop-shadow(0px 3px 5px var(--bene-medium-shadow));
   border-radius: 5px;
-
 }
 
 .transfer-donations-table-content {
@@ -550,13 +548,13 @@ a {
   color: var(--bene-base-high);
 }
 
-.transfer-donations-table>p {
+.transfer-donations-table > p {
   color: #7a7a7a;
   padding-left: 20px;
   padding-right: 20px;
 }
 
-.transfer-donations-table-content>div {
+.transfer-donations-table-content > div {
   padding: 20px;
   border-bottom: var(--bene-border) solid 1px;
 }
@@ -740,11 +738,11 @@ select:hover {
   min-width: 800px;
 }
 
-.accountstatus>div {
+.accountstatus > div {
   max-width: 240px;
 }
 
-.accountstatus>div>img {
+.accountstatus > div > img {
   padding: 20px;
 }
 
@@ -794,7 +792,7 @@ textarea {
   filter: drop-shadow(0px 5px 10px var(--bene-medium-hover-shadow));
 }
 
-.gridviewimg>img {
+.gridviewimg > img {
   width: 250px;
   /* background-image: url("Assets/amazon-brazil-fire.jpg"); */
   background-size: cover;
